5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1785_3140.log
== TEST (2019-05-30 11:23:56) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))
i = zeros(v,dtype=float)
m = arange(v)
a = 0
while(i < size(v)):
	m[i] = (((v[i])**5 + m[i])/size(v))**1/5
	a = a + 1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:24:30) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))
a = zeros(v,dtype=float)
m = arange(v)
a = 0
while(i < size(v)):
	m[i] = (((v[i])**5 + m[i])/size(v))**1/5
	a = a + 1
print(m)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:03) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

v1 = zeros9(v,dtype=float)
d = arange(v1)

print9d
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:08) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

v1 = zeros9(v,dtype=float)
d = arange(v1)

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:18) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

v1 = zeros(v,dtype=float)
d = arange(v1)

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:39) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

v1 = zeros(v)
d = arange(v1)

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:28:38) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))


d = arange(v)

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:29:42) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

v1 = zeros(v,dtype=float)
d = arange(v1)

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:30:04) 
-- CODE:

v = array(eval(input("insira os numeros:")))

v1 = zeros(v,dtype=float)
d = arange(v1)

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:30:20) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

v1 = zeros(v,dtype=float)
d = arange(v1)

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:31:22) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

v1 = zeros(v,dtype=float)
d = arange(v1)
i = 0
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:31:36) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

v1 = zeros(v)
d = arange(v1)
i = 0
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:31:38) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

v1 = zeros(v)
d = arange(v1)
i = 0
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:31:45) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

v1 = zeros(v)
d = arange(v)
i = 0
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:29) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

v1 = zeros(v)
d = arange(v)
i = 0
while i < size(v):
	d[i] = (v[i])**5
print9d
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:34) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

v1 = zeros(v)
d = arange(v)
i = 0
while i < size(v):
	d[i] = (v[i])**5
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:57) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))


d = arange(v)
i = 0
while i < size(v):
	d[i] = (v[i])**5
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:14) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))


i = 0
while i < size(v):
	d[i] = (v[i])**5
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:48) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

m = zeros(v)
i = 0
while i < size(v):
	d[i] = (v[i])**5
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:05) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

m = zeros[]
i = 0
while i < size(v):
	d[i] = (v[i])**5
print(d)
-- ERROR:
File "XXXX", line 4
    m = zeros[]
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:09) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

m = zeros
i = 0
while i < size(v):
	d[i] = (v[i])**5
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:19) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

m = zeros
i = 0
while i < size(v):
	m[i] = (v[i])**5
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:53) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

m = zeros
i = 0
while i < size(v):
	a = (v[i])**5
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:03) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

m = zeros
i = 0
while i < size(v):
	a = (v[i])**5
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:17) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

m = zeros
i = 0
while i < size(v):
	v = (v[i])**5
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:53) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

m = zeros
d = arange(v)
i = 0
while i < size(v):
	 = (v[i])**5
print(m)
-- ERROR:
File "XXXX", line 8
    = (v[i])**5
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:58) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

m = zeros
d = arange(v)
i = 0
while i < size(v):
	 = (v[i])**5
print(m)
-- ERROR:
File "XXXX", line 8
    = (v[i])**5
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:39:14) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

m = zeros
d = arange(v)
i = 0
while i < size(v):
	d[i] = (v[i])**5
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:40:30) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

m = zeros
d = arange(v)
i = 0
while i < size(v):
	a = (v[i])**5
	i = i + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:40:44) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))


i = 0
while i < size(v):
	a = (v[i])**5
	i = i + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:09) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))


i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:25) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:21) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
n = (a**5)/size(v)
m = n**1/5

print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:44:21) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
n = (a**5)/size(v)
m = n**1/5

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:44:48) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
n = (a**5)/size(v)
m = n**1/5

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:30) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
n = (a)/size(v)
m = n**1/5

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:46:18) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = ((a)/size(v))**1/5


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:47:19) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = ((a)/size(v))


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:47:33) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = ((a)/size(v))**1/5


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:47:44) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = ((a)/size(v))**1/5


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:48:51) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = ((a)/size(v))**1/5


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:48:57) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = ((a)/size(v))**1/5


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:53) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = ((a)/size(v))**1/5


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:58) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = ((a)/size(v))


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:51) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = (a/size(v))**1/5


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:01) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = (a/size(v))**1/5


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:09) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = (a/size(v))


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:35) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = (a/size(v))
n = m**1/5

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:39) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = (a/size(v))
n = m**1/5

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:12) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = (a/size(v))


print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:38) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = a/i


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:55) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
while i < size(v):
	a = (v[i])**5 + a
	i = i + 1
m = (a/i)**1/5


print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:42) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
m = (sum(v))**5
n = size(v)
o = (m/n)**1/5
print(round(0,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:55:02) 
-- CODE:
from numpy import *
v = array(eval(input("insira os numeros:")))

a = 0
i = 0
m = (sum(v))**5
n = size(v)
o = (m/n)**1/5
print(round(o,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
